@@ -9,6 +9,7 @@
 \alias{model.frame.svyrep.design}
 \alias{summary.svyrep.design}
 \alias{print.summary.svyrep.design}
+\alias{degf<-}
 %- Also NEED an `\alias' for EACH other topic documented here.
 \title{Specify survey design with replicate weights}
 \description{
@@ -33,7 +34,7 @@ type=c("BRR","Fay","JK1", "JKn","bootstrap","ACS","successive-difference","JK2",
 combined.weights=TRUE, rho=NULL, bootstrap.average=NULL, scale=NULL,rscales=NULL,
 fpc=NULL,fpctype=c("fraction","correction"),mse=getOption("survey.replicates.mse"),
  dbtype="SQLite", dbname,...) 
-
+degf(design)<-value
 \method{image}{svyrep.design}(x, ...,
 				 col=grey(seq(.5,1,length=30)), type.=c("rep","total"))
 }
@@ -63,6 +64,8 @@ below}
 \item{...}{Other arguments to \code{\link{image}}}
 \item{col}{Colors}
 \item{type.}{\code{"rep"} for only the replicate weights, \code{"total"} for the replicate and sampling weights combined.}
+\item{design}{replicate-weight design}
+\item{value}{new degrees of freedom to assign}
 }
 \details{
   In the BRR method, the dataset is split into halves, and the
@@ -116,7 +119,8 @@ below}
   The design degrees of freedom are returned by \code{\link{degf}}. By
   default they are computed from the numerical rank of the
   repweights. This is slow for very large data sets and you can specify
-  a value instead. 
+  a value instead. The specified value is not modified when you subset
+ the object; to change it use the \code{degf<-} assignment method
 
 \code{repweights} may be a character string giving a regular expression
  for the replicate weight variables. For example, in the
